--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
-    "core-js": "^3.21.1",
+    "core-js": "^3.37.1",
     "lodash": "^4.17.21",
     "parcel": "^2.4.0",
     "react": "^17.0.2",
@@ -11,6 +11,7 @@
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8"
+    "@babel/core": "^7.17.8",
+    "process": "^0.11.10"
   }
 }
